Make sure new bedford is visible;
Closes #134

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -57,7 +57,7 @@ body {
 }
 
 .statewide-view {
-    height: 500px;
+    height: 640px;
 }
 
 .choropleth-menu {
